// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Meta /> <Meta type="ang" /> renders correctly 1`] = `
<div>
  <div
    class="metadata-ang"
    id="metadata"
  >
    <div
      class="shabad-nav left disabled-nav"
    >
      <a>
        <svg
          class="chevron "
          data-testid="chevron"
          height="1em"
          style="transform: rotate(0deg);"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
          />
        </svg>
      </a>
    </div>
    <div
      class="meta"
    >
      <h4
        class="gurbani-font"
      >
        rwgu swrMg
         - 
        sRI gurU gRMQ swihb jI
         - 
        <a
          href="/ang?ang=1211&source=G"
        >
          AMg
           
          1211
        </a>
        
      </h4>
      <h4>
        Raag Saarang
         - 
        Sri Guru Granth Sahib Ji
         - 
        <a
          href="/ang?ang=1211&source=G"
        >
          Ang
           
          1211
        </a>
        
      </h4>
    </div>
    <div
      class="shabad-nav right disabled-nav"
    >
      <a>
        <svg
          class="chevron "
          data-testid="chevron"
          height="1em"
          style="transform: rotate(180deg);"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`<Meta /> <Meta type="hukamnama" /> renders correctly 1`] = `
<div>
  <div
    class="metadata-hukamnama"
    id="metadata"
  >
    <div
      class="meta"
    >
      <div
        class="meta-hukamnama"
      >
        <div
          class="meta-hukamnama-left"
        >
          <div
            class="meta-hukamnama-left-row"
          >
            <div>
              react calendar
            </div>
            <a
              class="hukam-text-link"
            >
              <span
                title="Past Hukamnamas"
              >
                Archive
              </span>
            </a>
          </div>
          <div
            class="meta-hukamnama-left-gotoshabad"
          >
            <a
              class="hukamnama-right-link"
              href="/shabad?id=4299"
            >
              <svg
                style="fill: rgb(1, 102, 155); width: 22px;"
                viewBox="0 0 491.807 491.807"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M485.802 221.184l-184.32-184.32a20.506 20.506 0 00-22.323-4.444c-7.659 3.154-12.636 10.65-12.636 18.924v82.002c-117.842 4.833-220.651 84.398-253.583 198.41C-1.314 381.195-.208 421.356.201 436.491l.082 3.973c0 9.216 6.164 17.306 15.032 19.743 1.823.492 3.645.737 5.448.737a20.51 20.51 0 0017.592-9.994c81.121-136.356 188.6-140.227 228.168-136.376v105.411c0 8.274 4.977 15.77 12.636 18.924 7.68 3.195 16.466 1.413 22.323-4.444l184.32-184.32c8.007-8.01 8.007-20.954 0-28.961z"
                />
              </svg>
              Go to Shabad
            </a>
          </div>
        </div>
        <h4>
          Daily Hukamnama Sri Harmandir Sahib, Amritsar
          , 
          <span />
        </h4>
        <div
          class="meta-hukamnama-right"
          role="button"
        >
          <span
            class="hukamnama-right-headphonesIcon"
          >
            <svg
              style="fill: rgb(1, 102, 155); width: 18px;"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 31C115.39 31 0 145.39 0 286v120c0 24.814 20.186 45 45 45h15V301H45c-5.284 0-10.285 1.082-15 2.763V286C30 161.928 131.928 61 256 61s226 100.928 226 225v17.763c-4.715-1.681-9.716-2.763-15-2.763h-15v150h15c24.814 0 45-20.186 45-45V286c0-140.61-115.39-255-256-255z"
              />
              <path
                d="M135 271h-15c-16.569 0-30 13.431-30 30v150c0 16.569 13.431 30 30 30h15c8.284 0 15-6.716 15-15V286c0-8.284-6.716-15-15-15zM392 271h-15c-8.284 0-15 6.716-15 15v180c0 8.284 6.716 15 15 15h15c16.569 0 30-13.431 30-30V301c0-16.569-13.431-30-30-30z"
              />
            </svg>
            <a
              title="Listen to Today's Hukamnama"
            >
              Today's Hukamnama
            </a>
          </span>
        </div>
      </div>
      <h4
        class="gurbani-font"
      >
        rwgu swrMg
         - 
        sRI gurU gRMQ swihb jI
         - 
        <a
          href="/ang?ang=1211&source=G"
        >
          AMg
           
          1211
        </a>
        
      </h4>
      <h4>
        Raag Saarang
         - 
        Sri Guru Granth Sahib Ji
         - 
        <a
          href="/ang?ang=1211&source=G"
        >
          Ang
           
          1211
        </a>
        
      </h4>
    </div>
    <div
      class="hukamnama-audio hukamnama-audio--shown "
    >
      <div
        aria-label="Audio player"
        class="rhap_container rhap_loop--off rhap_play-status--paused "
        role="group"
        tabindex="0"
      >
        <audio
          preload="auto"
          src="//old.sgpc.net/hukumnama/jpeg%20hukamnama/hukamnama.mp3"
        />
        <div
          class="rhap_header"
        >
          <div>
            <h3
              class="hukamnama-player-title"
            >
              Listen to Today's Hukamnama
            </h3>
            <span
              class="hukamnama-player-close-icon"
            >
              <svg
                height=".9em"
                viewBox="0 0 384 512"
                width=".9em"
              >
                <path
                  d="M323.1 441l53.9-53.9c9.4-9.4 9.4-24.5 0-33.9L279.8 256l97.2-97.2c9.4-9.4 9.4-24.5 0-33.9L323.1 71c-9.4-9.4-24.5-9.4-33.9 0L192 168.2 94.8 71c-9.4-9.4-24.5-9.4-33.9 0L7 124.9c-9.4 9.4-9.4 24.5 0 33.9l97.2 97.2L7 353.2c-9.4 9.4-9.4 24.5 0 33.9L60.9 441c9.4 9.4 24.5 9.4 33.9 0l97.2-97.2 97.2 97.2c9.3 9.3 24.5 9.3 33.9 0z"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="rhap_main rhap_stacked"
        >
          <div
            class="rhap_progress-section"
          >
            <div
              class="rhap_time rhap_current-time"
              id="rhap_current-time"
            >
              --:--
            </div>
            <div
              aria-label="Audio progress control"
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="0"
              class="rhap_progress-container"
              role="progressbar"
              tabindex="0"
            >
              <div
                class="rhap_progress-bar rhap_progress-bar-show-download"
              >
                <div
                  class="rhap_progress-indicator"
                  style="left: 0%;"
                />
                <div
                  class="rhap_progress-filled"
                  style="width: 0%;"
                />
              </div>
            </div>
            <div
              class="rhap_time rhap_total-time"
            >
              --:--
            </div>
          </div>
          <div
            class="rhap_controls-section"
          >
            <div
              class="rhap_additional-controls"
            />
            <div
              class="rhap_main-controls"
            >
              <button
                aria-label="Rewind"
                class="rhap_button-clear rhap_main-controls-button rhap_rewind-button"
                type="button"
              >
                <span />
              </button>
              <button
                aria-label="Play"
                class="rhap_button-clear rhap_main-controls-button rhap_play-pause-button"
                type="button"
              >
                <span />
              </button>
              <button
                aria-label="Forward"
                class="rhap_button-clear rhap_main-controls-button rhap_forward-button"
                type="button"
              >
                <span />
              </button>
            </div>
            <div
              class="rhap_volume-controls"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Meta /> <Meta type="shabad" /> renders correctly 1`] = `
<div>
  <div
    class="metadata-shabad"
    id="metadata"
  >
    <div
      class="shabad-nav left disabled-nav"
    >
      <a>
        <svg
          class="chevron "
          data-testid="chevron"
          height="1em"
          style="transform: rotate(0deg);"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
          />
        </svg>
      </a>
    </div>
    <div
      class="meta"
    >
      <h4
        class="gurbani-font"
      >
        rwgu swrMg
         - 
        sRI gurU gRMQ swihb jI
         - 
        <a
          href="/ang?ang=1211&source=G"
        >
          AMg
           
          1211
        </a>
        
      </h4>
      <h4>
        Raag Saarang
         - 
        Sri Guru Granth Sahib Ji
         - 
        <a
          href="/ang?ang=1211&source=G"
        >
          Ang
           
          1211
        </a>
        
      </h4>
    </div>
    <div
      class="shabad-nav right disabled-nav"
    >
      <a>
        <svg
          class="chevron "
          data-testid="chevron"
          height="1em"
          style="transform: rotate(180deg);"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;
